--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="action-bar-right">
-             {% if session.get('user_role') in ['Admin', 'VPE'] %}
+             {% if session.get('user_role') in ['Admin', 'VPE', 'Meeting Manager'] %}
                 <div class="button-group" id="edit-mode-buttons" style="display: none;">
                     <button id="cancel-edit-btn" class="btn btn-danger">Cancel</button>
                     <button id="add-row-btn" class="btn btn-info">Add</button>
