--- a/templates/pathway_library.html
+++ b/templates/pathway_library.html
@@ -71,7 +71,7 @@ block content %}
   >
     <div class="project-header">
       <h2 id="project-name"></h2>
-      {% if session.get('user_role') == 'Admin' %}
+      {% if session.get('user_role') in ['Admin', 'VPE'] %}
       <div class="button-group">
         <button
           id="cancel-project-btn"
