--- a/templates/pathway_library.html
+++ b/templates/pathway_library.html
@@ -71,7 +71,7 @@ block content %}
   >
     <div class="project-header">
       <h2 id="project-name"></h2>
-      {% if session.get('user_role') in ['Admin', 'VPE'] %}
+      {% if is_authorized(session.get('user_role'), 'PATHWAY_LIB_EDIT') %}
       <div class="button-group">
         <button
           id="cancel-project-btn"
