feat(log): add media url

--- a/templates/_speech_edit_modal.html
+++ b/templates/_speech_edit_modal.html
@@ -50,6 +50,15 @@
           <option value="">-- Select a Project --</option>
         </select>
       </div>
+      <div class="form-group">
+        <label for="edit-media-url">Media URL:</label>
+        <input
+          type="text"
+          id="edit-media-url"
+          name="media_url"
+          placeholder="e.g., https://youtu.be/..."
+        />
+      </div>
       <div class="form-actions">
         <button type="submit" class="btn btn-primary">Save Changes</button>
         <button
